# GraphRAG-research-Assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/graphrag_assistant/: __init__.py  api.py  ask.py  build_graph.py  chunking.py  config.py  db.py  evaluate.py  generate.py  ingest.py  llm.py  loaders.py  pipeline.py  resolve_entities.py  retrieve.py  schema.py  testset.py
src/graphrag_assistant/static/: index.html
tests/: test_chunking.py
